Fixed btn-navbar - it was behind #wrap. Just raised z-index.

--- a/app/assets/stylesheets/bootstrap_responsive_overrides.less
+++ b/app/assets/stylesheets/bootstrap_responsive_overrides.less
@@ -10,3 +10,9 @@
        width: auto;
    }
 }
+
+.btn-navbar {
+    position: absolute;
+    z-index: 2000;
+    right: 5px;
+}
